# llc-interpretability

./: .gitignore  README.md  ablations.ipynb  compare_reverse_models.py  dataloaders.py  final_comparison.py  fractok.py  grokking_peak_big.ipynb  grokking_peak_small.ipynb  haiku_to_pytorch_rg.py  llc.ipynb  llc_estimation.ipynb  llc_estimator.py  llc_fractok.ipynb  llc_trained.py  llc_trained_model.ipynb  load_trained_model.py  main_peak.py  pal_llc_estim.ipynb  pal_llc_no_rand_head.ipynb  palindrome.py  palindrome_llc_training.ipynb  peak.py  peak_llc_estim.ipynb  peak_llc_training.ipynb  pyproject.toml  repeated_token.py  requirements.txt  reverse.py  reverse_models.py  reverse_training_data.py  rg_new_llc.ipynb  run_tests.py  sanity_check_comprehensive.py  sanity_check_simple.py  simple_comparison.py  train_fractok.py  trained_reverse_model.pth  trainedmodels.py  trainedmodelsdemo.ipynb
datasets/: dataloaders.py  fractok_data.py  histogram_data.py  palindrome_data.py  peak_data.py  reverse_data.py  sort_data.py  triplets_data.py
llc_estim/: ablation_results_detailed.csv  ablation_results_summary.csv  llc_dev.ipynb  llc_dompeak.ipynb  llc_fractok.ipynb  llc_histogram.ipynb  llc_palindrome.ipynb  llc_peak.ipynb  llc_reverse.ipynb  llc_sort.ipynb  llc_triplets.ipynb  main_peak.py  pal_llc_estim.ipynb  pal_llc_no_rand_head.ipynb  peak_llc_estim.ipynb  rg_new_llc.ipynb
llc_training/: llc_trained.py  palindrome_llc_training.ipynb  peak_llc_training.ipynb  train_fractok.py  trainedmodelsdemo.ipynb
rasp_models/: dominantpeak.py  histogram.py  palindrome.py  peak.py  (+3 more)
(+28 files in other folders)
