[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llc-project"
version = "0.1.0"
authors = [{ name = "Your Name" }]
description = "LLC estimation and training project"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = { find = { where = ["."] , include = [
    "datasets",
    "llc_estim",
    "llc_training",
    "grokking",
    "models",
    "rasp_models",
    "results",
    "tests",
    "tracr",
]}}